Netlify Test Semantic

--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,8 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
-      <input type="email" name="email" />
-      <textarea name="message"></textarea>
+    <form name="email" netlify netlify-honeypot="bot-field" hidden>
+      <input type="email" name="email" />  
     </form>
 
     <div id="root"></div>
